<resources>
    <string name="app_name">Garage</string>
    <string name="image">image</string>
    <string name="account_amp_settings"><![CDATA[Account & Settings]]></string>
    <string name="md_rashed_pervez">Md Rashed Pervez</string>
    <string name="_01922549551">01922549551</string>
    <string name="_4_9">4.9</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="digital_payment">Digital payment</string>
    <string name="language">Language</string>
    <string name="permissions">Permissions</string>
    <string name="help">help</string>
    <string name="customer_support">Customer Support</string>
    <string name="faq">FAQ</string>
    <string name="user_terms">User Terms</string>
    <string name="more">more</string>
    <string name="rate_us">Rate us</string>
    <string name="refer_garage">Refer Garage</string>
    <string name="log_out">Log Out</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="continue_txt">Continue</string>
    <string name="enter_your_pin">Enter your PIN</string>
    <string name="phone_number_does_not_have_11_digits">Phone number does not have 11 digits</string>
    <string name="details_page">Details Page</string>
    <string name="home">Home</string>
    <string name="garage_list">Garage List</string>
    <string name="parts_shop">Parts Shop</string>
    <string name="wallet">Wallet</string>
    <string name="show_more">Show More</string>
    <string name="best_automobile_garage">Best Automobile Garage</string>
    <string name="menu">Menu</string>
    <string name="vehicle_info">Vehicle Info</string>
    <string name="brand">Brand :</string>
    <string name="model">Model :</string>
    <string name="manufacture_year">Manufacture Year :</string>
    <string name="car_photo">Car Photo :</string>
    <string name="accessibility">Accessibility</string>
    <string name="service_history">Service History</string>
    <string name="garage_type">Garage Type</string>
    <string name="request_for_service">Request for service</string>
    <string name="confirmation">Confirmation</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="contact_us">Contact Us</string>
    <string name="start_a_conversation">Start a conversation</string>
    <string name="speak_with_us">Speak with us</string>
</resources>